qa/apps/fhir-console/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fhir-console
spec:
  template:
    spec:
      imagePullSecrets:
        - name: images-registry-credentials
      containers:
        - image: index.docker.io/ferlabcrsj/fhir-console:c96ba40bf50a86d4f4a2e8c075cc1b0e05d50851-1639360390 # {"$imagepolicy": "cqgc-qa-fluxcd:fhir-console"}
          name: fhir-console
